grammar.js
    source_file: $ => repeat(choice(
      $.import_statement,
      $.declaration,
      $.statement,
    )),

    // Comments
    comment: $ => token(choice(
      seq('//', /.*/),
      seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/'),
    )),

    // Identifiers and literals
    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // Numbers
    number_literal: $ => choice(
      // Decimal with optional fractional part
      /\d+(\.\d+)?/,
      // Hexadecimal
      /0x[0-9a-fA-F]+/,
      // Binary
      /0b[01]+/,
    ),

    // Strings
    boolean_literal: $ => choice('true', 'false'),

    // Types
    type: $ => choice(
      $.primitive_type,
      $.array_type,
      $.pointer_type,
      $.function_type,
      $.struct_type,
      $.enum_type,
      $.bit_struct_type,
      $.type_identifier,
      $.error_type,
    ),

    primitive_type: $ => choice(
      'u8', 'u16', 'u24', 'i8', 'i16', 'i24', 'bool', 'void',
      'f8.8', 'f.8', 'f.16', 'f16.8', 'f8.16',
    ),

    array_type: $ => choice(
      // Old syntax: [size]type
      seq(
        '[',
        $.expression,
        ']',
        $.type,
      ),
      // New syntax: [type; size]
      seq(
        '[',
        $.type,
        ';',
        $.expression,
        ']',
      ),
    ),

    pointer_type: $ => seq(
      '*',
      optional(choice('mut', 'const')),
      $.type,
    ),

    return_type: $ => choice(
      seq('->', $.type, optional(seq('?', $.type_identifier))),  // -> type ? ErrorEnum
      seq('->', '(', commaSep1($.type), ')'),
    ),

    error_type: $ => 'Error',

    // Visibility modifiers
    visibility: $ => 'pub',

    // Declarations
    declaration: $ => choice(
      $.function_declaration,
      $.asm_function,
      $.mir_function,
      $.variable_declaration,
      $.constant_declaration,
      $.type_alias,
      $.struct_declaration,
      $.enum_declaration,
      $.interface_declaration,
      $.impl_block,
      $.attributed_declaration,
      $.lua_block,
      $.compile_time_if_declaration,
      $.minz_metafunction_declaration,
      $.minz_block,
      $.mir_block_declaration,
      $.define_template,
      $.meta_execution_block,
    ),

    function_declaration: $ => seq(
      optional($.ctie_directive),  // NEW: CTIE directives for functions
      optional($.visibility),
      optional('export'),
      choice('fun', 'fn'),  // Both work - developer happiness!
      $.identifier,
      optional('?'),  // Optional ? for error-throwing functions
      optional($.generic_parameters),
      '(',
      optional($.parameter_list),
      ')',
      $.return_type,
      $.block,
    ),

    parameter_list: $ => commaSep1($.parameter),

    parameter: $ => choice(
      'self',  // self parameter for methods
      seq(
        $.identifier,
        ':',
        $.type,
      )
    ),

    variable_declaration: $ => seq(
      optional($.visibility),
      choice('let', 'var', 'global'),  // 'global' as developer-friendly synonym
      optional('mut'),
      $.identifier,
      optional(seq(':', $.type)),
      optional(seq('=', $.expression)),
      ';',
    ),

    visibility: $ => 'pub',

    attributed_declaration: $ => seq(
      $.attribute,
      $.declaration,
    ),

    // Statements
    statement: $ => choice(
      $.expression_statement,
      $.return_statement,
      $.if_statement,
      $.while_statement,
      $.for_statement,
      $.loop_statement,
      $.break_statement,
      $.continue_statement,
      $.block_statement,
      $.variable_declaration,
      $.constant_declaration,  // Allow const declarations in functions
      $.function_declaration,  // Allow nested functions!
      $.defer_statement,
      $.case_statement,
      $.asm_block,
      $.compile_time_asm,
      $.mir_block,
      $.minz_block,
      $.target_block,
    ),

    return_statement: $ => seq(
      'return',
      optional($.expression),
      ';',
    ),

    expression: $ => choice(
      $.case_expression,
      $.binary_expression,
      $.unary_expression,
      $.postfix_expression,
    ),
    
    binary_expression: $ => choice(
      // Assignment has lowest precedence and is right-associative
      prec.right(1, seq(
        field('left', $.expression),
        field('operator', '='),
        field('right', $.expression),
      )),
      // Compound assignment operators
      ...['+=', '-=', '*=', '/=', '%='].map(operator => prec.right(1, seq(
        field('left', $.expression),
        field('operator', operator),
        field('right', $.expression),
      ))),
      ...['or', 'and', '||', '&&'].map(operator => prec.left(2, seq(
        field('left', $.expression),
        field('operator', operator),
        field('right', $.expression),
      ))),
      // Swift-style nil coalescing operator
      prec.left(2, seq(
        field('left', $.expression),
        field('operator', '??'),
        field('right', $.expression),
      )),
      ...['==', '!=', '<', '>', '<=', '>='].map(operator => prec.left(3, seq(
        field('left', $.expression),
        field('operator', operator),
        field('right', $.expression),
      ))),
      ...['|', '^', '&'].map(operator => prec.left(4, seq(
        field('left', $.expression),
        field('operator', operator),
        field('right', $.expression),
      ))),
      ...['<<', '>>'].map(operator => prec.left(5, seq(
        field('left', $.expression),
        field('operator', operator),
        field('right', $.expression),
      ))),
      prec.left(5, seq(
        field('left', $.expression),
        field('operator', '..'),
        field('right', $.expression),
      )),
      ...['+', '-'].map(operator => prec.left(6, seq(
        field('left', $.expression),
        field('operator', operator),
        field('right', $.expression),
      ))),
      ...['*', '/', '%'].map(operator => prec.left(7, seq(
        field('left', $.expression),
        field('operator', operator),
        field('right', $.expression),
      ))),
    ),

    unary_expression: $ => prec(9, choice(
      seq('!', $.expression),
      seq('-', $.expression),
      seq('~', $.expression),
      seq('&', optional('mut'), $.expression),
      seq('*', $.expression),
    )),

    postfix_expression: $ => choice(
      $.call_expression,
      $.index_expression,
      $.field_expression,
      $.try_expression,
      $.cast_expression,
      $.primary_expression,
    ),

    primary_expression: $ => choice(
      $.identifier,
      $.number_literal,
      $.string_literal,
      $.char_literal,
      $.boolean_literal,
      $.array_literal,
      $.array_initializer,
      $.struct_literal,
      $.tuple_literal,
      $.parenthesized_expression,
      $.block,
      $.inline_assembly,
      $.sizeof_expression,
      $.alignof_expression,
      $.metaprogramming_expression,
      $.error_literal,
      $.lambda_expression,
      $.if_expression,
      $.ternary_expression,
      $.when_expression,
    ),

    array_literal: $ => seq(
      '[',
      optional(commaSep1($.expression)),
      ']',
    ),

    tuple_literal: $ => seq(
      '(',
      commaSep2($.expression),
      ')',
    ),

    block: $ => seq(
      '{',
      repeat(choice(
        $.statement,
        $.function_declaration,  // Allow nested function definitions!
      )),
      optional($.expression),
      '}',
    ),

    attribute: $ => prec.right(seq(
      '@',
      $.identifier,
      optional(seq(
        '(',
        optional($.argument_list),
        ')',
      )),
    )),

    // Lua metaprogramming
